--- a/index.html
+++ b/index.html
@@ -9,16 +9,70 @@
     <div>
         <img src="Screenshot 2019-08-02 at 13.48.52.png" alt="equinox">
     </div>
+    <div>
     <h1>
-        <b>
+        
             ABOUT ME
-        </b>
+        
     </h1>
+</div>
     <br>
     <br>
+    <div>
     <h2>
         Hi There!
     </h2>
+</div>
+<div>
+    <h3>
+        Thanks for stopping by and taking the time to read my bio.
+    </h3>
+</div>
+    <br>
+    <div>
+    <p>
+        I am the oldest of 3 boys in the family (but the only one with a full head of hair…. Even if it is going grey!)
+    </p>
+</div>
+<div>
+    <p>
+        As a young boy I always enjoyed sports and represented my school and several sports clubs playing football, rugby league and union, cricket, basketball and boxing amongst other sports. Also I should mention that from an early age I have always been an avid Manchester City fan. Watching them play on many occasions has been a real highlight for me!
+    </p>
+</div>
+<div>
+<img src="download (1).png" alt="mcfc">
+</div>
+<div>
+    <p>
+        My favourite subjects at school were Mathematics, Geography and Science. I managed to leave school with 9 good grades at GCSE level. 
+    </p>
+</div>
+<div>
+    <p>
+        I then managed to get a YT Scheme paid £40 a week when I left school. My first job was as a distribution clerk for a big importer of toys based in Oldham whilst studying Business Admin for an NVQ level 2 and 3 and Customer Service NVQ level 2
+    </p>
+    <br>
+    <P>
+        I then stumbled into the life of casinos! Trained as a croupier and enjoyed travelling the UK and the world being a croupier. I worked in Canada and Australia before embarking on the cruise ship life around Northern Europe and The Carribean 
+    </P>
+    <br>
+    <p>
+        Getting bored of living out of a suitcase, I returned home to Manchester and had the opportunity to change careers. I trained as a PCV driver and was able to tour the UK and parts of mainland Europe. During this time I moved to South Wales and lived there for 10 years and even learnt the language
+I really enjoyed this job until a serious accident was to change my life and leave me with life changing circumstances.
+    </p>
+</div>
+<div>
+    <img src="download (1).jpeg" alt="casino"> 
+    <img src="download (3).jpeg" alt="oriana">
+    <img src="download (2).jpeg" alt="coach">
+</div>
+<div>
+    <br>
+    <p>
+        Having fought for my life and defy doctors and learn to walk again I now have an amazing lady in my life who keeps encouraging me to keep moving forward and forge an amazing future for us both.She has also reinvigorated my passion in learning a new language. She is currently teaching me Persian and Arabic.
+I am looking for a new career and challenge and have discovered Coding and Developing. It's tough and totally different to anything I have ever done. However, it's interesting and really works me mentally and I hope I can forge a career down this path!
+    </p>
+</div>
    
 </body>
 </html>
