fresh commit weds am

--- a/page2.html
+++ b/page2.html
@@ -187,6 +187,17 @@ Whilst creating a native app for iOS I researched and spoke to classmates and fo
 <br>
 <br>
 <div>
+                <p>
+                                The image below shows the classic triple constraint triangle.
+                </p>
+                <img src="264007983-5592.png" alt="constraints" class="center">
+                <p>
+                                This model shows that if any constraint is strained then this would affect the other constraints thus resulting in affecting the quality!
+                </p>
+        </div>
+<br>
+<br>
+<div class="gdpr">
         <ul>
                 <li>Lawfulness, Fairness and Transparency</li>
                 <li>Purpose Limitation</li>
@@ -199,12 +210,24 @@ Whilst creating a native app for iOS I researched and spoke to classmates and fo
 </div>
 <br>
 <br>
+
 <div>
         <p>
                 Compliance with these key principles is fundamental for good data protection practice and is key to compliance.[3]<br> Severe penalties are in place for companies that do not comply with these regulations.<br>
                 [1]http://internet-safety-2012.info/legal-constraints-guidelines-and-procedures/<br>
                 [2]https://www.workfront.com/blog/the-6-project-constraints<br>
                 [3]https://ico.org.uk/for-organisations/guide-to-data-protection/guide-to-the-general-data-protection-regulation-gdpr/principles/<br>
+        </p>
+</div>
+<br>
+<br>
+<div>
+        <p>
+                        The image below shows the classic triple constraint triangle.
+        </p>
+        <img src="264007983-5592.png" alt="constraints" class="center">
+        <p>
+                        This model shows that if any constraint is strained then this would affect the other constraints thus resulting in affecting the quality!
         </p>
 </div>
 </body>
