--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
    <link rel="stylesheet" type="text/css" href="main.css">
+
     <title>Colin's Blog</title>
 </head>
 <body>
@@ -10,16 +11,29 @@
     <div>
         <img src="Screenshot 2019-08-02 at 13.48.52.png" alt="equinox">
     </div>
-    <div>
-        <button type="button">Language</button>
+    <!---
+    <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn">Language</button>
+        <div id="myLanguage" class="dropdown-content">
+            <a href="#english">English</a>
+            <a href="persian1.html">Persian</a>
+            <a href="arabic1.html">Arabic</a>
+        </div>
+    </div> -->
+    <br>
+    <br>
+    <div class="topnav">
+        <a class="active" href="index.html">HOME</a>
+        <a href="page2.html"> Unit 1.1</a>
+        <a href="page3.html"> Unit 1.2</a>
+        <a href="page4.html"> Unit 1.3</a>
+        <a href="persian1.html"> Persian Home</a>
+        <a href="arabic1.html"> Arabic Home</a>
     </div>
     <br>
     <br>
-    <div>
-        <ul>
-           
-        </ul>
-    </div>
+    <br>
+    <br>
     <div>
     <h1>
      ABOUT ME 
@@ -49,7 +63,7 @@
     </p>
 </div>
 <div>
-<img src="download (1).png" alt="mcfc" class="center"> 
+<img  src="download (1).png" alt="mcfc" class="center" > 
 </div>
 <div>
     <p>
