update thurs lunch

--- a/arabic1.html
+++ b/arabic1.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Document</title>
+    <title>ArabicBlog</title>
 </head>
 <body>
+        <div>
+                <a id="back_top"></a>
+        </div>
+                <div>
+                                <img src="Screenshot 2019-08-02 at 13.48.52.png" alt="equinox">
+                            </div>
+                            <br>
+                            <br>
         <div class="topnav">
                 <a href="index.html">HOME</a>
                 <a href="page2.html"> Unit 1.1</a>
@@ -14,6 +22,15 @@
                 <a href="persian1.html"> Persian Home</a>
                 <a class="active" href="arabic1.html"> Arabic Home</a>
             </div>
+            <br>
+            <div class="arabnav">
+                    <a class="active" href="arabic1.html">الصفحة الرئيسية</a>
+                    <a href="arabic2.html">وحدة 1</a>
+            </div>
+            <br>
+            <br>
+            <br>
+            
     <div>
         <h1>
                 عني
@@ -54,6 +71,11 @@
                 كما عزز حماسي لتعلم لغة جديدة.  وهي الآن تعلمني اللغة الفارسية والعربية. أنا أبحث عن مهنة جديدة وتحدي واكتشفت البرمجة والتطوير. إنها مهمة صعبة ، ومختلفة تمامًا عن أي شيء قمت به على الإطلاق. ومع ذلك ، إنه أمر مثير للاهتمام يشغل فکری حقًا وآمل أن أكون قادرًا على متابعة هذا المسار الوظيفي.
                 
         </p>
+    </div>
+    <br>
+    <br>
+    <div>
+            <a href="#back_top">أعلى</a>
     </div>
 </body>
 </html>
