--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     
     <div>
+        <a id="back_to_top">
         <img src="Screenshot 2019-08-02 at 13.48.52.png" alt="equinox">
+   </a>
     </div>
+
     <!---
     <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">Language</button>
@@ -30,6 +33,7 @@
         <a href="persian1.html"> Persian Home</a>
         <a href="arabic1.html"> Arabic Home</a>
     </div>
+    
     <br>
     <br>
     <br>
@@ -86,13 +90,13 @@ I really enjoyed this job until a serious accident was to change my life and lea
 </div>
 <div class="row">
     <div class="column">
-        <img src="download (1).jpeg" alt="casino" style="width: 100%">
+        <img src="download (1).jpeg" alt="casino" style="width: 100%" class="center">
     </div>
     <div class="column">
-        <img src="download (2).jpeg" alt="coach" style="width: 100%">
+        <img src="download (2).jpeg" alt="coach" style="width: 100%" class="center">
     </div>
     <div class="column">
-        <img src="download (3).jpeg" alt="oriana" style="width: 100%">
+        <img src="download (3).jpeg" alt="oriana" style="width: 100%" class="center">
     </div>
 </div>
     <p>
@@ -100,6 +104,12 @@ I really enjoyed this job until a serious accident was to change my life and lea
 I am looking for a new career and challenge and have discovered Coding and Developing. It's tough and totally different to anything I have ever done. However, it's interesting and really works me mentally and I hope I can forge a career down this path!
     </p>
 </div>
+<br>
+<br>
+<div>
+    <a href="#back_to_top">Back To The Top</a>
+</div>
+
    
 </body>
 </html>
