--- a/page3.html
+++ b/page3.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div>
+        <a id="back_to_top"></a>
+    </div>
+    <div>
             <img src="Screenshot 2019-08-02 at 13.48.52.png" alt="equinox">
     </div>
     <div class="topnav">
@@ -111,6 +114,11 @@
                 By checking and rechecking the tasks I was set,<br> I set them up as tasks on a Trello board so I could have reminders at my fingertips as to what i needed to achieve.
                  
         </p>
+    </div>
+    <br>
+    <br>
+    <div>
+        <a href="#back_to_top">Back To Top</a>
     </div>
     
 </body>
