--- a/page4.html
+++ b/page4.html
@@ -6,7 +6,10 @@
     <title>Section 3</title>
 </head>
 <body>
-        <div></div>
+    <div>
+        <a id="back_to_top"></a>
+    </div>
+        <div>
                 <img src="Screenshot 2019-08-02 at 13.48.52.png" alt="equinox">
             </div>
             <br>
@@ -85,6 +88,10 @@
         <p>
                 To test a digital solution I would open the page and try to run each function,<br> checking that each function looks and does what it is supposed to do.<br> Then passing it on to colleagues to use and check to see if they can use and navigate through the page as I had planned,<br> without the bias I would more than likely have using my own design.<br>My colleagues can then see if there are any bugs that exist which I will not see with my own eyes.
         </p>
+    </div>
+    <br>
+    <div>
+        <a href="#back_to_top">Back To Top</a>
     </div>
 
 </body>
