--- a/persian1.html
+++ b/persian1.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+                <div>
+                                <a id="back_top"></a>
+                        </div>
+                <div>
+                                <img src="Screenshot 2019-08-02 at 13.48.52.png" alt="equinox">
+                            </div>
+                            <br>
+                            <br>
         <div class="topnav">
                 <a href="index.html">HOME</a>
                 <a href="page2.html"> Unit 1.1</a>
@@ -14,7 +22,16 @@
                 <a class="active" href="persian1.html"> Persian Home</a>
                 <a href="arabic1.html"> Arabic Home</a>
             </div>
-    <d>
+        <br>
+        <div class="pernav">
+                <a class="active" href="persian1.html">خانه
+                        </a>
+                        <a href="persian2.html">واحد 1</a>
+        </div>
+            <br>
+            <br>
+            <br>
+    <div>
         <h1>درباره من</h1>
     </div>
     <br>
@@ -43,11 +60,19 @@
 از زندگی با یک چمدان خسته شدم وبه خانه ام منچستربرگشتم. فرصت تغییر شغل برایم پیدا شد. من بعنوان راننده پی سی وی آموزش دیدم  و توانستم در انگلستان و مناطقی از سرزمین اصلی اروپا نیز  گشت و گذارکنم. درطول این مدت من به ولز جنوبی نقل مکان کردم و 10 سال در آنجا زندگی کردم و حتی زبان را نیزیاد گرفتم .واقعاً از این کار لذت می بردم تا اینکه یک تصادف جدی زندگی مرا تغییر داد و مرا با موقعیت تغییر زندگی مواجه کرد . 
             </p>
         </div>
+        <div>
         <p>
                 برای زندگی ام جنگیدم و از پزشکان سرپیچی کردم و یاد گرفتم که دوباره راه بروم. من در حال حاضر یک خانم شگفت انگیز در زندگی ام دارم که همواره مرا ترغیب می کند که به جلو حرکت کنم و آینده ای شگفت انگیز را برای هر دو مان بسازم.
                 او همچنین شور و شوق من را در یادگیری یک زبان جدید دوباره تقویت کرده است. و هم اکنون به من فارسی و عربی می آموزد.
                 من به دنبال یک حرفه و چالش جدید هستم و برنامه نویسی و توسعه را کشف کرده ام. این کار سخت و کاملاً متفاوت با هر کاری که من تا به حال  انجام داده ام است. با این حال، جالب است و  واقعاً ذهنم را درگیر می کند و امیدوارم بتوانم در این مسیر شغلی ایجاد کنم.
                 
         </p>
+        </div>
+        <br>
+        <br>
+<br>
+<div>
+    <a href="#back_top">بالا</a>
+</div>
 </body>
 </html>
