--- a/page2.html
+++ b/page2.html
@@ -7,6 +7,9 @@
 </head>
 <body>
         <div>
+             <a id="back_to_top"></a>   
+        </div>
+        <div>
                 <img src="Screenshot 2019-08-02 at 13.48.52.png" alt="equinox">
             </div>
             <br>
@@ -236,6 +239,9 @@ Whilst creating a native app for iOS I researched and spoke to classmates and fo
 </div>
 <br>
 <br>
+<div>
+        <a href="#back_to_top">Back To Top</a>
+</div>
 
 </body>
 </html>
