thurs pm update

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     <br>
     <br>
     <div>
+            <img src="Copy of 20190308_132458.jpg" alt="me" style="width: 200px; height: 200px" class="me">
+            </div>
+    <div>
     <h2>
         Hi There!
     </h2>
@@ -100,12 +103,13 @@ I really enjoyed this job until a serious accident was to change my life and lea
     </div>
 </div>
     <p>
-        Having fought for my life and defy doctors and learn to walk again I now have an amazing lady in my life who keeps encouraging me to keep moving forward and forge an amazing future for us both.She has also reinvigorated my passion in learning a new language. She is currently teaching me Persian and Arabic.
+        Havin fought for my life and defy doctors and learn to walk again I now have an amazing lady in my life who keeps encouraging me to keep moving forward and forge an amazing future for us both.She has also reinvigorated my passion in learning a new language. She is currently teaching me Persian and Arabic.
 I am looking for a new career and challenge and have discovered Coding and Developing. It's tough and totally different to anything I have ever done. However, it's interesting and really works me mentally and I hope I can forge a career down this path!
     </p>
 </div>
 <br>
 <br>
+
 <div>
     <a href="#back_to_top">Back To The Top</a>
 </div>
