--- a/persian1.html
+++ b/persian1.html
@@ -34,7 +34,10 @@
     <div>
         <h1>درباره من</h1>
     </div>
-    <br>
+    <br><br><br>
+    <div>
+                <img src="Copy of 20190308_132458.jpg" alt="me" style="width: 200px; height: 200px" class="me">
+                </div>
     <br>
     <div>
     <p>سلام! 
