--- a/arabic1.html
+++ b/arabic1.html
@@ -19,6 +19,7 @@
                 <a href="page2.html"> Unit 1.1</a>
                 <a href="page3.html"> Unit 1.2</a>
                 <a href="page4.html"> Unit 1.3</a>
+                <a href="page5.html"> Unit 2.1</a>
                 <a href="persian1.html"> Persian Home</a>
                 <a class="active" href="arabic1.html"> Arabic Home</a>
             </div>
