--- a/arabic2.html
+++ b/arabic2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Document</title>
+    <title>Arab Outcome 1.1</title>
 </head>
 <body>
         <div>
