--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Section 1</title>
+    <title>Outcome 1 Section 1</title>
 </head>
 <body>
         <div>
@@ -19,6 +19,7 @@
                         <a class="active" href="page2.html"> Unit 1.1</a>
                         <a href="page3.html"> Unit 1.2</a>
                         <a href="page4.html"> Unit 1.3</a>
+                        <a href="page5.html"> Unit 2.1</a>
                         <a href="persian1.html"> Persian Home</a>
                         <a href="arabic1.html"> Arabic Home</a>
                     </div>
