--- a/page3.html
+++ b/page3.html
@@ -12,6 +12,8 @@
     <div>
             <img src="Screenshot 2019-08-02 at 13.48.52.png" alt="equinox">
     </div>
+    <br>
+    <br>
     <div class="topnav">
             <a href="index.html">HOME</a>
             <a href="page2.html"> Unit 1.1</a>
@@ -21,18 +23,20 @@
             <a href="persian1.html"> Persian Home</a>
             <a href="arabic1.html"> Arabic Home</a>
         </div>
+        <br>
+        <br>
     <div>
         <h1>Unit 1 Section 2</h1>
     </div>
     <br>
     <br>
-    <div>
+    <div class="text-block">
         <h2>2.1 Review the ongoing use of IT tools and change approach as needed</h2>
     </div>
     <br>
     <br>
     <br>
-    <div>
+    <div class="text-block">
         <p>
                 Whilst on the project of making and designing my own website blog I used Visual Studio Code to write up the website<br> using HTML, CSS and Javascript.<br> It is a programme that seems very popular and very easy to use.<br> Works well with Github where i can save and store all work done.<br>
                 Trello  really helped with me keeping track where i was upto with my project.<br> What needed doing, what was urgent and what tasks I could plan for.<br>
@@ -46,7 +50,7 @@
     <br>
     <br>
     <br>
-    <div>
+    <div class="text-block">
         <h2>
                 2.2 Describe whether the IT tools selected were appropriate
         </h2>
