final friday commit

--- a/arabic2.html
+++ b/arabic2.html
@@ -14,7 +14,7 @@
             </div>
             <br>
             <div class="arabnav">
-                    <a href="arabic1.html">الصفحة الرئيسية</a>
+                    <a class="active" href="arabic1.html">الصفحة الرئيسية</a>
                     <a class="active" href="arabic2.html">وحدة 1</a>
             </div>
             <br>
@@ -147,7 +147,7 @@
         </div>
         <br>
         <br>
-        <div>
+        <div class="tp">
                 <a href="#back_top">أعلى</a>
         </div>
 
