--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     <br>
     <div class="topnav">
         <a class="active" href="index.html">HOME</a>
-        <a href="page2.html"> Unit 1.1</a>
-        <a href="page3.html"> Unit 1.2</a>
-        <a href="page4.html"> Unit 1.3</a>
-        <a href="page5.html"> Unit 2.1</a>
-        <a href="persian1.html"> Persian Home</a>
-        <a href="arabic1.html"> Arabic Home</a>
+        <a class="active" href="page2.html"> Unit 1.1</a>
+        <a class="active" href="page3.html"> Unit 1.2</a>
+        <a class="active" href="page4.html"> Unit 1.3</a>
+        <a class="active" href="page5.html"> Unit 2.1</a>
+        <a class="active" href="persian1.html"> Persian Home</a>
+        <a class="active" href="arabic1.html"> Arabic Home</a>
     </div>
     
     <br>
     <br>
     <br>
     <br>
-    <div class="tex">
+    <div>
     <h1>
      ABOUT ME 
     </h1>
@@ -49,23 +49,23 @@
     <div>
             <img src="Copy of 20190308_132458.jpg" alt="me" style="width: 200px; height: 200px" class="me">
             </div>
-    <div class="tex">
+    <div>
     <h2>
         Hi There!
     </h2>
 </div>
-<div class="tex">
+<div>
     <h3>
         Thanks for stopping by and taking the time to read my bio.
     </h3>
 </div>
     <br>
-    <div class="tex">
+    <div>
     <p>
         I am the oldest of 3 boys in the family (but the only one with a full head of hair…. Even if it is going grey!)
     </p>
 </div>
-<div class="tex">
+<div>
     <p>
         As a young boy I always enjoyed sports and represented my school and several sports clubs<br>playing football, rugby league and union, cricket, basketball and boxing amongst other sports.<br> Also I should mention that from an early age I have always been an avid Manchester City fan.<br> Watching them play on many occasions has been a real highlight for me!
     </p>
@@ -76,12 +76,12 @@
 <img src="Screenshot_20180121-081325.png" alt="mcrbee" style="width: 200px; height: 200px" class="center" >
 -->
 </div>
-<div class="tex">
+<div>
     <p>
         My favourite subjects at school were Mathematics, Geography and Science. I managed to leave school with 9 good grades at GCSE level. 
     </p>
 </div>
-<div class="tex">
+<div>
     <p>
         I then managed to get a YT Scheme paid £40 a week when I left school. My first job was as a distribution clerk for a big importer of toys based in Oldham whilst studying Business Admin for an NVQ level 2 and 3 and Customer Service NVQ level 2
     </p>
@@ -106,7 +106,7 @@ I really enjoyed this job until a serious accident was to change my life and lea
         <img src="download (3).jpeg" alt="oriana" style="width: 100%" class="center">
     </div>
 </div>
-<div class="tex">
+<div>
     <p>
         Havin fought for my life and defy doctors and learn to walk again I now have an amazing lady in my life who keeps encouraging me to keep moving forward and forge an amazing future for us both.She has also reinvigorated my passion in learning a new language. She is currently teaching me Persian and Arabic.
 I am looking for a new career and challenge and have discovered Coding and Developing. It's tough and totally different to anything I have ever done. However, it's interesting and really works me mentally and I hope I can forge a career down this path!
@@ -123,7 +123,7 @@ I am looking for a new career and challenge and have discovered Coding and Devel
 
 </div>
 
-<div>
+<div class="tp">
     <a href="#back_to_top">Back To The Top</a>
 </div>
 
