--- a/page2.html
+++ b/page2.html
@@ -15,13 +15,13 @@
             <br>
             <br>
             <div class="topnav">
-                        <a href="index.html">HOME</a>
+                        <a class="active" href="index.html">HOME</a>
                         <a class="active" href="page2.html"> Unit 1.1</a>
-                        <a href="page3.html"> Unit 1.2</a>
-                        <a href="page4.html"> Unit 1.3</a>
-                        <a href="page5.html"> Unit 2.1</a>
-                        <a href="persian1.html"> Persian Home</a>
-                        <a href="arabic1.html"> Arabic Home</a>
+                        <a class="active" href="page3.html"> Unit 1.2</a>
+                        <a class="active" href="page4.html"> Unit 1.3</a>
+                        <a class="active" href="page5.html"> Unit 2.1</a>
+                        <a class="active" href="persian1.html"> Persian Home</a>
+                        <a class="active" href="arabic1.html"> Arabic Home</a>
                     </div>
                     <br>
                     <br>
@@ -54,11 +54,11 @@
                 <br>
 
                 <br>
-                [1]<a href="https://www.oksbdc.org/why-is-technology-important-in-business/">https://www.oksbdc.org/why-is-technology-important-in-business/</a>
+                [1]<a class="quote" href="https://www.oksbdc.org/why-is-technology-important-in-business/">https://www.oksbdc.org/why-is-technology-important-in-business/</a>
                 <br>
-                [2]<a href="https://smallbusiness.chron.com/business-benefits-information-technology-4021.html">https://smallbusiness.chron.com/business-benefits-information-technology-4021.html</a>
+                [2]<a class="quote" href="https://smallbusiness.chron.com/business-benefits-information-technology-4021.html">https://smallbusiness.chron.com/business-benefits-information-technology-4021.html</a>
                 <br>
-                [3]<a href="https://businesscasestudies.co.uk/business-theory/operations/the-use-of-it.html">https://businesscasestudies.co.uk/business-theory/operations/the-use-of-it.html</a>
+                [3]<a class="quote" href="https://businesscasestudies.co.uk/business-theory/operations/the-use-of-it.html">https://businesscasestudies.co.uk/business-theory/operations/the-use-of-it.html</a>
  </p>
 </div>
 <br>
@@ -121,7 +121,7 @@ Google and Youtube are great research tools at your disposal. Showing you websit
                 Google Drive is a cloud storage system that becomes of great use.<br> Being able to make notes of my research and storing it all in one place.<br> I can easily access what i have at a moments notice no matter where i am, as long as I have access to my Google account.<br>
                 Researching and learning and practicing how websites are being writtain and coded.<br> Learning what language is used. HTML and CSS have to be researched and learnt and practised in order for me to effectively create an interesting webpage.<br>
                 Github is a great storage device that runs well with Visual Studio Code.<br> Visual Studio Code will be used to create the new website and how it will look.<br> Using HTML, CSS and Javascript to design and code my website.<br> Github will be used to save and store all my work done on Virtual Studio Code so i can access my file anywhere as long as I have acess to Github.
-                <br><a href="https://trello.com/b/LdIRNEzR/my-blog">My TRELLO board</a> is how I managed to keep track of where I was upto with the tasks I had set myself.
+                <br><a class="quote" href="https://trello.com/b/LdIRNEzR/my-blog">My TRELLO board</a> is how I managed to keep track of where I was upto with the tasks I had set myself.
                 <br>    
         </p>
 </div>
@@ -173,9 +173,9 @@ Whilst creating a native app for iOS I researched and spoke to classmates and fo
 <br>
 <div>
         <p>
-                I first set up a kanban board on “Trello” which helped to start loading cards with tasks i knew i would have to do.<br> This helped formulate a plan of attack and where I should start.<br><a href="https://developer.mozilla.org/en-US/">https://developer.mozilla.org/en-US/</a><br>
-                <a href="https://www.w3schools.com/">https://www.w3schools.com/</a><br>
-                <a href="https://codepen.io/">https://codepen.io/</a><br>Are great websites for help and tips!<br>
+                I first set up a kanban board on “Trello” which helped to start loading cards with tasks i knew i would have to do.<br> This helped formulate a plan of attack and where I should start.<br><a class="quote" href="https://developer.mozilla.org/en-US/">https://developer.mozilla.org/en-US/</a><br>
+                <a class="quote" href="https://www.w3schools.com/">https://www.w3schools.com/</a><br>
+                <a class="quote" href="https://codepen.io/">https://codepen.io/</a><br>Are great websites for help and tips!<br>
                 Youtube was also a great source for videos of tips and help. A great visual aid I could follow.<br>
                 Visual Studio Code is a fantastic programme, easy to use and easy to write your code onto.<br> Highlighting errors as they happen so you can really keep track as to where you are upto.<br> Keep saving as I go I could see how my website was turning out with each code added.<br>
                 Github was a big help.<br> It meant I could store and save everything in one place and work from anywhere providing i had access to my GitHub account. 
@@ -235,14 +235,14 @@ Whilst creating a native app for iOS I researched and spoke to classmates and fo
 <div>
         <p>
                 Compliance with these key principles is fundamental for good data protection practice and is key to compliance.[3]<br> Severe penalties are in place for companies that do not comply with these regulations.<br><br><br>
-                [1]<a href="http://internet-safety-2012.info/legal-constraints-guidelines-and-procedures/">http://internet-safety-2012.info/legal-constraints-guidelines-and-procedures/</a><br>
-                [2]<a href="https://www.workfront.com/blog/the-6-project-constraints">https://www.workfront.com/blog/the-6-project-constraints</a><br>
-                [3]<a href="https://ico.org.uk/for-organisations/guide-to-data-protection/guide-to-the-general-data-protection-regulation-gdpr/principles/">https://ico.org.uk/for-organisations/guide-to-data-protection/guide-to-the-general-data-protection-regulation-gdpr/principles/</a><br>
+                [1]<a class="quote" href="http://internet-safety-2012.info/legal-constraints-guidelines-and-procedures/">http://internet-safety-2012.info/legal-constraints-guidelines-and-procedures/</a><br>
+                [2]<a class="quote" href="https://www.workfront.com/blog/the-6-project-constraints">https://www.workfront.com/blog/the-6-project-constraints</a><br>
+                [3]<a class="quote" href="https://ico.org.uk/for-organisations/guide-to-data-protection/guide-to-the-general-data-protection-regulation-gdpr/principles/">https://ico.org.uk/for-organisations/guide-to-data-protection/guide-to-the-general-data-protection-regulation-gdpr/principles/</a><br>
         </p>
 </div>
 <br>
 <br>
-<div>
+<div class="tp">
         <a href="#back_to_top">Back To Top</a>
 </div>
 
