--- a/page5.html
+++ b/page5.html
@@ -15,13 +15,13 @@
             <br>
             <br>
 <div class="topnav">
-<a href="index.html">HOME</a>
-<a href="page2.html"> Unit 1.1</a>
-<a href="page3.html"> Unit 1.2</a>
-<a href="page4.html"> Unit 1.3</a>
+<a class="active" href="index.html">HOME</a>
+<a class="active" href="page2.html"> Unit 1.1</a>
+<a class="active" href="page3.html"> Unit 1.2</a>
+<a class="active" href="page4.html"> Unit 1.3</a>
 <a class="active" href="page5.html"> Unit 2.1</a>
-<a href="persian1.html"> Persian Home</a>
-<a href="arabic1.html"> Arabic Home</a>
+<a class="active" href="persian1.html"> Persian Home</a>
+<a class="active" href="arabic1.html"> Arabic Home</a>
 </div>
 <br>
 <br>
@@ -147,7 +147,7 @@
 </div>
 
 
-<div>
+<div class="tp">
         <a href="#back_to_top">Back To The Top</a>
     </div>    
 </body>
