--- a/persian2.html
+++ b/persian2.html
@@ -16,7 +16,7 @@
             </div>
             <br>
         <div class="pernav">
-                <a href="persian1.html">خانه
+                <a class="active" href="persian1.html">خانه
                         </a>
                         <a class="active" href="persian2.html">واحد 1</a>
         </div>
@@ -161,7 +161,7 @@
 <br>
 <br>
 <br>
-<div>
+<div class="tp">
     <a href="#back_top">بالا</a>
 </div>
     
