--- a/arabic1.html
+++ b/arabic1.html
@@ -15,18 +15,18 @@
                             <br>
                             <br>
         <div class="topnav">
-                <a href="index.html">HOME</a>
-                <a href="page2.html"> Unit 1.1</a>
-                <a href="page3.html"> Unit 1.2</a>
-                <a href="page4.html"> Unit 1.3</a>
-                <a href="page5.html"> Unit 2.1</a>
-                <a href="persian1.html"> Persian Home</a>
+                <a class="active" href="index.html">HOME</a>
+                <a class="active" href="page2.html"> Unit 1.1</a>
+                <a class="active" href="page3.html"> Unit 1.2</a>
+                <a class="active" href="page4.html"> Unit 1.3</a>
+                <a class="active" href="page5.html"> Unit 2.1</a>
+                <a class="active" href="persian1.html"> Persian Home</a>
                 <a class="active" href="arabic1.html"> Arabic Home</a>
             </div>
             <br>
             <div class="arabnav">
                     <a class="active" href="arabic1.html">الصفحة الرئيسية</a>
-                    <a href="arabic2.html">وحدة 1</a>
+                    <a class="active" href="arabic2.html">وحدة 1</a>
             </div>
             <br>
             <br>
@@ -79,7 +79,7 @@
     </div>
     <br>
     <br>
-    <div>
+    <div class="tp">
             <a href="#back_top">أعلى</a>
     </div>
 </body>
