--- a/persian1.html
+++ b/persian1.html
@@ -15,19 +15,19 @@
                             <br>
                             <br>
         <div class="topnav">
-                <a href="index.html">HOME</a>
-                <a href="page2.html"> Unit 1.1</a>
-                <a href="page3.html"> Unit 1.2</a>
-                <a href="page4.html"> Unit 1.3</a>
-                <a href="page5.html"> Unit 2.1</a>
+                <a class="active" href="index.html">HOME</a>
+                <a class="active" href="page2.html"> Unit 1.1</a>
+                <a class="active" href="page3.html"> Unit 1.2</a>
+                <a class="active" href="page4.html"> Unit 1.3</a>
+                <a class="active" href="page5.html"> Unit 2.1</a>
                 <a class="active" href="persian1.html"> Persian Home</a>
-                <a href="arabic1.html"> Arabic Home</a>
+                <a class="active" href="arabic1.html"> Arabic Home</a>
             </div>
         <br>
         <div class="pernav">
                 <a class="active" href="persian1.html">خانه
                         </a>
-                        <a href="persian2.html">واحد 1</a>
+                        <a class="active" href="persian2.html">واحد 1</a>
         </div>
             <br>
             <br>
@@ -75,7 +75,7 @@
         <br>
         <br>
 <br>
-<div>
+<div class="tp">
     <a href="#back_top">بالا</a>
 </div>
 </body>
