final commit friday pm

--- a/arabic2.html
+++ b/arabic2.html
@@ -135,9 +135,9 @@
         <div>
             <p>
                     قمت أولاً بإعداد لوحة من الکانبان علی تارلو مما ساعد على بدء تحميل البطاقات اضافتا إلى المهام التي كنت أعرف يجب القيام به. هذا ساعد في صياغة خطة الهجوم و من أين أجب أن أبدأ.
-                    <br><a href="https://developer.mozilla.org/en-US/">https://developer.mozilla.org/en-US/</a><br>
-                    <a href="https://www.w3schools.com/">https://www.w3schools.com/</a><br>
-                <a href="https://codepen.io/">https://codepen.io/</a><br>
+                    <br><a class="quote" href="https://developer.mozilla.org/en-US/">https://developer.mozilla.org/en-US/</a><br>
+                    <a class="quote" href="https://www.w3schools.com/">https://www.w3schools.com/</a><br>
+                <a class="quote" href="https://codepen.io/">https://codepen.io/</a><br>
                 أحسن مواقع الالکترونیه للمساعدة و التوجیه .
                 یوتیوب كان أيضا مصدرا كبيرا لمقاطع الفيديو للتدريب والمساعدة . مساعدة بصرية كبيرة التی أستطيع أن أتابعها.
                 يعد ویژال استودیو کود برنامجًا رائعًا وسهل الاستخدام ویسهل فیه کتابة الرمز الخاصة بك. أستمر في التخزين  وأثناء تقدمي أستطيع أن أرى كيف یصیر الموقع الويب الخاص بي عن طريق إضافة أي رمز.
