--- a/persian2.html
+++ b/persian2.html
@@ -147,9 +147,9 @@
 <div>
     <p>
             من اول  یک تخته کانبان را روی ترلو راه اندازی کردم که به شروع بارگذاری کارت ها کمک کرد. همراه با وظایفی که می دانستم باید انجام دهم . این به تدوین نقشه حمله کمک کرد و اینکه باید از کجا شروع کنم .
-            <a href="https://developer.mozilla.org/en-US/">https://developer.mozilla.org/en-US/</a><br>
-            <a href="https://www.w3schools.com/">https://www.w3schools.com/</a><br>
-            <a href="https://codepen.io/">https://codepen.io/</a><br>
+            <a class="quote" href="https://developer.mozilla.org/en-US/">https://developer.mozilla.org/en-US/</a><br>
+            <a class="quote" href="https://www.w3schools.com/">https://www.w3schools.com/</a><br>
+            <a class="quote" href="https://codepen.io/">https://codepen.io/</a><br>
             !   وب سایتهای عالی برای کمک و راهنمایی هستند
 
             یوتیوب همچنین منبع خوبی برای فیلم های آموزشی و کمکی بود. یک کمک عالی بصری که می توانم آن را دنبال کنم.
